# Embedded

./: README.md
Code/C/: README.md
Code/C++/: README.md
Code/C++/app_one/: README.md
Code/C++/test_app/: .editorconfig  .gitignore  README.md  build.sh  meson.build  run.sh
Code/C++/test_app/inc/: device.hpp  meson.build  testcls.hpp
Code/C++/test_app/src/: device.cpp  main.cpp  meson.build  testcls.cpp
Literature/: README.md
